# lohikeitto

./: .env.example  .gitignore  AGENTS.md  API.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  lohikeitto.env.example  lohikeitto.local.env.example  services_analysis.md
.github/: dependabot.yml
.github/workflows/: ci.yml  create-docker-image.yml  deploy.yml
.zed/: settings.json
admin/: CLAUDE.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs
admin/app/: globals.css  layout.tsx  page.tsx
admin/app/categories/: page.tsx
admin/app/limbus/: page.tsx
admin/app/s3/: page.tsx
admin/app/settings/: page.tsx
admin/components/: add-service-dialog.tsx  categories-manager.tsx  checkbox-select.tsx  color-studio.tsx  context-menu.tsx  dir-picker.tsx  download-toast.tsx  download-widget.tsx  env-sync.tsx  filter-bar.tsx  index.ts  limbus-table.tsx  logo-studio.tsx  nav.tsx  s3-browser.tsx  searchable-select.tsx  service-detail.tsx  service-icon.tsx  services-table.tsx  sidebar.tsx  squircle.tsx  stat-card.tsx  theme-toggle.tsx  toast-container.tsx  top-bar.tsx  vectorize-widget.tsx
admin/lib/: api.ts  color.ts  download-store.ts  format-size.ts  format.ts  image-cache.ts  index.ts  logo-cache.ts  toast.ts  types.ts  use-click-outside.ts  use-download.ts
admin/src/: types.ts
admin/types/: imagetracerjs.d.ts  potrace-wasm.d.ts
crates/admin/: Cargo.toml
crates/admin/src/: app.rs  config.rs  error.rs  main.rs
crates/admin/src/routes/: database.rs  health.rs  limbus.rs  logos.rs  mod.rs  s3.rs  services.rs  vectorize.rs
crates/admin/src/routes/s3/: archive.rs  files.rs  mod.rs
crates/api/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: boot.rs  lib.rs
crates/shared/src/models/: limbus.rs  mod.rs  service.rs
crates/shared/src/utils/: mod.rs
docs/: .gitignore  pnpm-lock.yaml  source.config.ts
docs/design/: data-model-v2.md
docs/public/: openapi.json
history/: services_all_2026-03-17.sql
migrations/: 20250315000000_init.sql  20250315000001_seed.sql  20250316000000_locales_schema.sql  20250316000001_seed_expansion.sql  20250327000000_add_bundle_id_alt_names.sql  20250327100000_add_tags_desc_socials.sql  20250406000000_limbus_metadata.sql  20260508000000_drop_limbus.sql
prometheus/: alerts.yml
scripts/: download-backups.sh  restore-latest-dump.sh
src/: app.rs  config.rs  error.rs  logo.rs  main.rs  response.rs  telemetry.rs
src/db/: mod.rs  pool.rs  services.rs
src/dto/: health.rs  internal.rs  search.rs  service.rs
src/models/: brandfetch.rs  internal.rs  logodev.rs  mod.rs  service.rs
src/routes/: admin.rs  health.rs  init.rs  logos.rs  mod.rs  search.rs  services.rs  verify.rs
src/s3/: client.rs
src/services/: brandfetch.rs  imgconv.rs  logo_sync.rs  mod.rs  search.rs
static/: admin.html
todo/: get_search.mdx
(+100 files in other folders)
