[package]
name = "lohikeitto"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "migrate", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde"] }
