[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "tls-rustls", "migrate", "macros", "derive", "uuid", "json", "chrono"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"
futures = "0.3"
rust-s3 = { version = "0.36", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
